# giraffe

./: .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  app.sh  bean.sh  fabfile.py  giraffe.py  install.sh  pyproject.toml  requirements.dev.txt  requirements.pypy.txt  requirements.txt  test_giraffe.py  tox.ini
.circleci/: config.yml
.ebextensions/: giraffe.config
.github/: python-app.yml
etc/: gunicorn.conf.py  newrelic.ini  old_fabfile.py  upstart.conf
overlay/: README.md
templates/: base.html  index.html
