[tool.poetry]
name = "Giraffe"
version = "0.1.0"
description = "Just imagemagick on ec2"
authors = ["Mike Steder <steder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pillow = "^7.1.1"
gunicorn = "^20.0.4"
six = "^1.14.0"
tinys3 = "^0.1.12"
wand = "^0.5.9"
requests = "^2.23.0"
python-binary-memcached = "^0.29.0"
gevent = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
fabric = "^2.5.0"
virtualenv = "^20.0.16"
fabtools = "^0.20.0"
hammock = "^0.2.4"
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
