[tool.poetry]
name = "Giraffe"
version = "0.2.0"
description = "Just imagemagick on ec2"
authors = ["Mike Steder <steder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
# Modern ASGI framework and server
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pillow = "^11.3.0"
tinys3 = "^0.1.12"
wand = "^0.6.13"
requests = "^2.32.4"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
fabric = "^3.2.2"
fabtools = "^0.20.0"
hammock = "^0.2.4"
mock = "^5.2.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 